fix borrowing info overlaps loan on small mobile res

--- a/src/pages/BorrowPages/BorrowBulkOverviewPage/BorrowBulkOverviewPage.module.scss
+++ b/src/pages/BorrowPages/BorrowBulkOverviewPage/BorrowBulkOverviewPage.module.scss
@@ -4,7 +4,7 @@
   padding-right: 280px;
 
   @media (max-width: 1240px) {
-    padding-bottom: 290px;
+    padding-bottom: 340px;
     padding-right: 0;
   }
 }
